fix: responsive on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -106,17 +106,17 @@ section {
 
 /* Setting the background of the hero section to a gradient. */
 .hero {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 3rem;
-  place-items: center;
 }
 
 .left-hero {
-  width: auto;
+  width: 65%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.3rem;
 }
 
 .txt {
@@ -164,9 +164,7 @@ a.btn  {
 }
 
 .right-hero {
-  width: 380px;
-  display: grid;
-  place-items: center;
+  width: auto;
 }
 
 .right-hero img {
@@ -408,14 +406,13 @@ opacity: 1;
     width: 860px;
     margin: auto;
   }
-
+  .hero {
+    gap: 2.5rem;
+  }
   .btn {
-    width: 35%;
+    width: 50%;
   }
-  .right-hero{
-    width: 270px;
-    height: 270px;
-  }
+
   .stackIcons img {
     width: 2.35rem;
     height: 2.35rem;
@@ -451,13 +448,8 @@ opacity: 1;
     margin: auto;
   }
   .hero {
-    padding: 80px 0;
-  }
-  .hero {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, auto);
-    gap: 2rem;
-    
+    flex-wrap: wrap;
+      gap: 2rem;
   }
   .left-hero {
     width: 100%;
@@ -471,6 +463,7 @@ opacity: 1;
     margin-top: 4.375rem;
   }
   .btn {
+    width: 45%;
     margin: auto;
   }
   .right-hero{
@@ -573,13 +566,11 @@ opacity: 1;
     width: 500px;
     margin: auto;
   }
-
   .hero {
-    grid-template-columns: 1fr;
-    grid-template-rows: 2fr 1fr;
+    margin-top: 70px;
+    flex-wrap: wrap;
     gap: 1.8rem;
   }
-
   .left-hero {
     width: 100%;
     padding: unset;
@@ -587,17 +578,18 @@ opacity: 1;
   }
   .btn {
     width: 35%;
-    margin: auto;
+    margin:0 auto;
   }
   .right-hero{
     width: 250px;
     height: 250px;
-    margin: auto;
+    
   }
 
   .right-hero img {
     width: 100%;
     border-radius: 50%;
+    margin: auto;
   }
 
   .txt {
@@ -676,10 +668,12 @@ opacity: 1;
 
   .hero, .tech_stack, .projects, .contact {
     box-sizing: border-box;
-    max-width: 85%;
+    width: 85vw;
     margin: auto;
   }
-
+  .hero {
+    margin-top: 70px;
+  }
   .left-hero {
     width: 100%;
   }
@@ -737,7 +731,6 @@ opacity: 1;
   }
 
   .contactEmail {
-    width: 100%;
     height: 120px;
   }
 
@@ -758,16 +751,14 @@ opacity: 1;
     max-width: 85vw;
     margin: auto;
   }
-  .right-hero{
-    width: 230px;
-    height: 230px;
+  .hero {
+    margin-top: 80px;
+  }
+  .txt {
+    font-size: 1.9rem;
   }
   .btn {
     width: 60%;
-  }
-  #hero__img {
-    width: 260px;
-    height: 260px;
   }
   .card__cover img {
     height: 200px;
@@ -787,15 +778,12 @@ opacity: 1;
     margin: auto;
   }
   .hero {
-    padding: 40px 0;
+    margin-top: 80px;
+    gap: 1.3rem;
   }
   .btn {
     width: 60%;
   }
-  #hero__img {
-    width: 100%;
-  }
-  
   .fig {
     margin: 0 1rem;
   }
